# sfml_asteroids

./: CMakeLists.txt  README.mkd
include/: asteroid.hpp  bullet.hpp  explosion.hpp  game.hpp  gameobject.hpp  screen.hpp  ship.hpp  utils.hpp
sources/: asteroid.cpp  bullet.cpp  explosion.cpp  game.cpp  main.cpp  ship.cpp
